# ReplyGuy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  WP06_spec.md  config.example.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.kittify/: metadata.yaml
.kittify/memory/: constitution.md
.kittify/workspaces/: 001-replyguy-autonomous-x-growth-assistant-WP01.json  (+8 more)
crates/tuitbot-server/: Cargo.toml
crates/tuitbot-server/src/: account.rs  error.rs  lib.rs  main.rs  state.rs  ws.rs
crates/tuitbot-server/src/routes/: accounts.rs  activity.rs  analytics.rs  approval.rs  assist.rs  content.rs  costs.rs  discovery.rs  health.rs  media.rs  mod.rs  replies.rs  runtime.rs  settings.rs  strategy.rs  targets.rs
crates/tuitbot-server/src/routes/content/: calendar.rs  compose.rs  drafts.rs  list.rs  mod.rs  scheduled.rs
crates/tuitbot-server/tests/: api_tests.rs  fresh_install_auth.rs
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/src/: lib.rs
docs/: architecture.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  index.md  lan-mode.md  mcp-reference.md  operations.md  release-and-publishing.md  requirements.txt  troubleshooting.md
migrations/: 20260226000010_media_support.sql  20260226000012_mcp_telemetry.sql  20260226000013_approval_professionalization.sql  20260226000014_qa_gates.sql  20260227000015_multi_account_foundation.sql
scripts/: check-mcp-manifests.sh  generate-mcp-manifests.sh  install.sh  run-conformance.sh  run-sessions.sh  smoke-test-setup.sh
(+487 files in other folders)
